--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-*,
 *::before,
 *::after {
   -webkit-box-sizing: border-box;
@@ -12,3 +11,26 @@ body {
   font-family: "Montserrat" sans-serif;
   background-color: #444;
 }
+
+nav {
+  text-transform: uppercase;
+}
+nav a,
+nav i,
+nav .nav-link,
+nav .navbar-brand {
+  color: #fff;
+}
+nav .navbar-brand {
+  font-weight: bold;
+}
+nav .fa-bars {
+  padding: 10px;
+}
+nav .nav-link:hover,
+nav .navbar-brand:hover {
+  color: #039dff;
+}
+nav .active {
+  color: #039dff;
+}/*# sourceMappingURL=main.css.map */
