--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
-*,
+@import 'colors';
+
 *::before,
 *::after {
 	box-sizing: border-box;
@@ -10,4 +11,32 @@ body {
 	position: relative;
 	font-family: 'Montserrat' sans-serif;
 	background-color: #444;
+}
+
+nav {
+	text-transform: uppercase;
+
+	a,
+	i,
+	.nav-link,
+	.navbar-brand {
+		color: $white-color;
+	}
+
+	.navbar-brand {
+		font-weight: bold;
+	}
+
+	.fa-bars {
+		padding: 10px;
+	}
+
+	.nav-link:hover,
+	.navbar-brand:hover {
+		color: $blue-color;
+	}
+
+	.active {
+		color: $blue-color;
+	}
 }
