--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,10 @@ body {
 	background-color: #444;
 }
 
+.blue-text {
+	color: $blue-color;
+}
+
 nav {
 	text-transform: uppercase;
 
@@ -38,5 +42,50 @@ nav {
 
 	.active {
 		color: $blue-color;
+	}
+}
+
+header {
+	color: $white-color;
+
+	h1 {
+		text-transform: uppercase;
+	}
+
+	.hero-img {
+		position: relative;
+		height: 100vh;
+		background-image: url('../img/header-mini.jpg');
+		background-position: center;
+		background-size: cover;
+		background-attachment: fixed;
+		z-index: -2;
+	}
+
+	.hero-shadow {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-color: rgb(0, 0, 0, 0.8);
+		z-index: -10;
+	}
+
+	.hero-text {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		height: 100%;
+		padding: 10;
+		text-align: center;
+		z-index: 5;
+	}
+}
+
+@media (min-width: 1200px) {
+	header {
+		.hero-img {
+			background-image: url('../img/header-big.jpg');
+		}
 	}
 }
