--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,7 @@ body {
 
 nav {
 	text-transform: uppercase;
+	z-index: 1;
 
 	a,
 	i,
@@ -59,7 +60,7 @@ header {
 		background-position: center;
 		background-size: cover;
 		background-attachment: fixed;
-		z-index: -2;
+		z-index: 0;
 	}
 
 	.hero-shadow {
@@ -79,6 +80,19 @@ header {
 		padding: 10;
 		text-align: center;
 		z-index: 5;
+	}
+
+	.btn-outline-light {
+		text-transform: uppercase;
+	}
+
+	.fa-chevron-down {
+		position: absolute;
+		font-size: 30px;
+		bottom: 20px;
+		left:50%;
+		transform: translateX(-50%);
+		color: $white-color;
 	}
 }
 
