--- a/sass/main.scss
+++ b/sass/main.scss
@@ -50,7 +50,12 @@ header {
 	color: $white-color;
 
 	h1 {
+		font-size: 30px;
 		text-transform: uppercase;
+	}
+
+	p{
+		font-size: 14px;
 	}
 
 	.hero-img {
@@ -93,6 +98,32 @@ header {
 		left:50%;
 		transform: translateX(-50%);
 		color: $white-color;
+	}
+}
+
+@media (min-width: 375px) {
+	header {
+	
+		h1 {
+			font-size: 36px;
+		}
+	
+		p{
+			font-size: 16px;
+		}
+	}
+}
+
+@media (min-width: 768px) {
+	header {
+	
+		h1 {
+			font-size: 42px;
+		}
+	
+		p{
+			font-size: 20px;
+		}
 	}
 }
 
