--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,14 @@ body {
   color: #039dff;
 }
 
+.shadow-bg {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 nav {
   text-transform: uppercase;
+  -webkit-transition: background-color 0.6s;
+  transition: background-color 0.6s;
   z-index: 1;
 }
 nav a,
@@ -96,6 +102,10 @@ header .fa-chevron-down {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   color: #fff;
+}
+
+.aboutus {
+  height: 600px;
 }
 
 @media (min-width: 375px) {
