--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,8 +17,13 @@ body {
 	color: $blue-color;
 }
 
+.shadow-bg {
+	background-color: rgb(0, 0, 0, 0.8);
+}
+
 nav {
 	text-transform: uppercase;
+	transition: background-color 0.6s;
 	z-index: 1;
 
 	a,
@@ -54,7 +59,7 @@ header {
 		text-transform: uppercase;
 	}
 
-	p{
+	p {
 		font-size: 14px;
 	}
 
@@ -95,20 +100,23 @@ header {
 		position: absolute;
 		font-size: 30px;
 		bottom: 20px;
-		left:50%;
+		left: 50%;
 		transform: translateX(-50%);
 		color: $white-color;
 	}
 }
 
+.aboutus {
+	height: 600px;
+}
+
 @media (min-width: 375px) {
 	header {
-	
 		h1 {
 			font-size: 36px;
 		}
-	
-		p{
+
+		p {
 			font-size: 16px;
 		}
 	}
@@ -116,12 +124,11 @@ header {
 
 @media (min-width: 768px) {
 	header {
-	
 		h1 {
 			font-size: 42px;
 		}
-	
-		p{
+
+		p {
 			font-size: 20px;
 		}
 	}
