--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,18 @@ body {
   background-color: #444;
 }
 
+h2 {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.underline {
+  margin: 0 auto 40px;
+  width: 60px;
+  height: 4px;
+  background-color: #039dff;
+}
+
 .blue-text {
   color: #039dff;
 }
@@ -104,8 +116,16 @@ header .fa-chevron-down {
   color: #fff;
 }
 
-.aboutus {
-  height: 600px;
+.aboutus i {
+  margin-top: 20px;
+  font-size: 30px;
+}
+.aboutus .aboutus-card-title {
+  font-size: 18px;
+  text-transform: uppercase;
+}
+.aboutus .aboutus-card-text {
+  font-size: 14px;
 }
 
 @media (min-width: 375px) {
