--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@
   padding: 0;
 }
 
+html {
+  scroll-padding-top: 82px;
+}
+
 body {
   position: relative;
   font-family: "Montserrat" sans-serif;
@@ -127,6 +131,13 @@ header .fa-chevron-down {
 .aboutus .aboutus-card-text {
   font-size: 14px;
 }
+.aboutus .aboutus-hover {
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+.aboutus .aboutus-hover:hover {
+  color: #039dff;
+}
 
 @media (min-width: 375px) {
   header h1 {
@@ -142,6 +153,11 @@ header .fa-chevron-down {
   }
   header p {
     font-size: 20px;
+  }
+}
+@media (min-width: 992px) {
+  html {
+    scroll-padding-top: 72px;
   }
 }
 @media (min-width: 1200px) {
