--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,10 @@
 	padding: 0;
 }
 
+html {
+	scroll-padding-top: 82px;
+}
+
 body {
 	position: relative;
 	font-family: 'Montserrat' sans-serif;
@@ -132,6 +136,14 @@ header {
 	.aboutus-card-text {
 		font-size: 14px;
 	}
+
+	.aboutus-hover {
+		transition: color 0.3s;
+	}
+
+	.aboutus-hover:hover {
+		color: $main-color;
+	}
 }
 
 @media (min-width: 375px) {
@@ -155,6 +167,12 @@ header {
 		p {
 			font-size: 20px;
 		}
+	}
+}
+
+@media (min-width: 992px) {
+	html {
+		scroll-padding-top: 72px;
 	}
 }
 
