--- a/css/main.css
+++ b/css/main.css
@@ -112,11 +112,11 @@ header .btn-outline-light {
 }
 header .fa-chevron-down {
   position: absolute;
-  font-size: 30px;
-  bottom: 20px;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+  bottom: 20px;
+  font-size: 30px;
   color: #fff;
 }
 
@@ -138,7 +138,8 @@ header .fa-chevron-down {
 .aboutus .aboutus-hover:hover {
   color: #039dff;
 }
-.aboutus .aboutus-hero-img {
+
+.aboutus-hero {
   position: relative;
   background-image: url("../img/about-hero-small.jpg");
   background-position: center;
@@ -146,13 +147,22 @@ header .fa-chevron-down {
   color: #ddd;
   z-index: 0;
 }
-.aboutus .aboutus-hero-img .aboutus-hero-shadow {
+.aboutus-hero .aboutus-shadow {
   position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
   color: rgba(0, 0, 0, 0.7);
   z-index: -5;
+}
+.aboutus-hero .aboutus-hero-item {
+  margin: 10px 0;
+}
+.aboutus-hero .aboutus-hero-item i {
+  font-size: 36px;
+}
+.aboutus-hero .aboutus-hero-item .aboutus-hero-title {
+  font-size: 24px;
 }
 
 @media (min-width: 375px) {
@@ -175,12 +185,12 @@ header .fa-chevron-down {
   html {
     scroll-padding-top: 72px;
   }
+  .aboutus-hero {
+    background-image: url("../img/about-hero-big.jpg");
+  }
 }
 @media (min-width: 1200px) {
   header .hero-img {
     background-image: url("../img/header-big.jpg");
-  }
-  .aboutus .aboutus-hero-img {
-    background-image: url("../img/about-hero-big.jpg");
   }
 }/*# sourceMappingURL=main.css.map */
