--- a/sass/main.scss
+++ b/sass/main.scss
@@ -114,10 +114,10 @@ header {
 
 	.fa-chevron-down {
 		position: absolute;
-		font-size: 30px;
-		bottom: 20px;
 		left: 50%;
 		transform: translateX(-50%);
+		bottom: 20px;
+		font-size: 30px;
 		color: $white-color;
 	}
 }
@@ -144,22 +144,34 @@ header {
 	.aboutus-hover:hover {
 		color: $main-color;
 	}
+}
 
-	.aboutus-hero-img {
-		position: relative;
-		background-image: url('../img/about-hero-small.jpg');
-		background-position: center;
-		background-size: cover;
-		color: $light-gray;
-		z-index: 0;
+.aboutus-hero {
+	position: relative;
+	background-image: url('../img/about-hero-small.jpg');
+	background-position: center;
+	background-size: cover;
+	color: $light-gray;
+	z-index: 0;
 
-		.aboutus-hero-shadow {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			color: rgb(0, 0, 0, 0.7);
-			z-index: -5;
+	.aboutus-shadow {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		color: rgb(0, 0, 0, 0.7);
+		z-index: -5;
+	}
+
+	.aboutus-hero-item {
+		margin: 10px 0;
+
+		i {
+			font-size: 36px;
+		}
+
+		.aboutus-hero-title {
+			font-size: 24px;
 		}
 	}
 }
@@ -192,17 +204,16 @@ header {
 	html {
 		scroll-padding-top: 72px;
 	}
+
+	.aboutus-hero {
+		background-image: url('../img/about-hero-big.jpg');
+	}
 }
 
 @media (min-width: 1200px) {
 	header {
 		.hero-img {
 			background-image: url('../img/header-big.jpg');
-		}
-	}
-	.aboutus {
-		.aboutus-hero-img {
-			background-image: url('../img/about-hero-big.jpg');
 		}
 	}
 }
