--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@ header .fa-chevron-down {
   top: 0;
   width: 100%;
   height: 100%;
-  color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: -5;
 }
 .aboutus-hero .aboutus-hero-item {
@@ -163,6 +163,21 @@ header .fa-chevron-down {
 }
 .aboutus-hero .aboutus-hero-item .aboutus-hero-title {
   font-size: 24px;
+}
+
+.portfolio .carousel-item {
+  position: relative;
+  height: 600px;
+}
+.portfolio .carousel-caption {
+  position: absolute;
+  left: 0;
+  right: 0;
+  padding: 40px 0;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.portfolio .carousel-indicators {
+  padding-bottom: 20px;
 }
 
 @media (min-width: 375px) {
