--- a/sass/main.scss
+++ b/sass/main.scss
@@ -93,7 +93,7 @@ header {
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		background-color: rgb(0, 0, 0, 0.8);
+		background-color: rgba(0, 0, 0, 0.8);
 		z-index: -10;
 	}
 
@@ -159,7 +159,7 @@ header {
 		top: 0;
 		width: 100%;
 		height: 100%;
-		color: rgb(0, 0, 0, 0.7);
+		background-color: rgba(0, 0, 0, 0.7);
 		z-index: -5;
 	}
 
@@ -173,6 +173,25 @@ header {
 		.aboutus-hero-title {
 			font-size: 24px;
 		}
+	}
+}
+
+.portfolio {
+	.carousel-item {
+		position: relative;
+		height: 600px;
+	}
+
+	.carousel-caption {
+		position: absolute;
+		left: 0;
+		right: 0;
+		padding: 40px 0;
+		background-color: rgb(0, 0, 0, 0.8);
+	}
+
+	.carousel-indicators {
+		padding-bottom: 20px;
 	}
 }
 
