Fixed: Scroll-spy.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -220,8 +220,8 @@ header {
 }
 
 @media (min-width: 992px) {
-	html {
-		scroll-padding-top: 72px;
+	nav {
+		height: 82px;
 	}
 
 	.aboutus-hero {
