--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,7 @@ html {
 body {
 	position: relative;
 	font-family: 'Montserrat' sans-serif;
-	background-color: #444;
+	background-color: $bg-color;
 }
 
 h2 {
@@ -195,6 +195,60 @@ header {
 	}
 }
 
+.prices {
+	.separator {
+		margin: 0 auto 20px;
+		width: 200px;
+		height: 2px;
+		background-color: $bg-color;
+	}
+
+	.price-box {
+		margin: 20px 10px;
+		padding: 30px;
+		background-color: $white-color;
+		box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+		transition: transform 0.3s;
+
+		h3 {
+			text-transform: uppercase;
+			color: $main-color;
+		}
+
+		span {
+			font-weight: bold;
+		}
+
+		i {
+			padding: 0px 5px;
+			font-size: 24px;
+		}
+
+		button {
+			padding: 10px 20px;
+			text-transform: uppercase;
+		}
+
+		.price-tag {
+			font-size: 30px;
+			font-weight: bold;
+		}
+	}
+
+	.price-box:hover {
+		transform: scale(1.05);
+	}
+
+	.price-info {
+		margin-top: 30px;
+		text-align: center;
+
+		a {
+			text-decoration: none;
+		}
+	}
+}
+
 @media (min-width: 375px) {
 	header {
 		h1 {
@@ -226,6 +280,12 @@ header {
 
 	.aboutus-hero {
 		background-image: url('../img/about-hero-big.jpg');
+	}
+
+	.prices {
+		.price-info {
+			font-size: 18px;
+		}
 	}
 }
 
