--- a/css/main.css
+++ b/css/main.css
@@ -228,6 +228,32 @@ header .fa-chevron-down {
   text-decoration: none;
 }
 
+.team {
+  position: relative;
+  background-image: url("../img/team-hero-small.jpg");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  color: #ddd;
+  z-index: 0;
+}
+.team .team-shadow {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: -5;
+}
+.team h2 {
+  color: #ddd;
+}
+.team .card img {
+  height: 300px;
+}
+.team .card .card-title {
+  text-transform: uppercase;
+}
 .team .card .card-footer i {
   padding: 10px;
   font-size: 16px;
@@ -259,6 +285,9 @@ header .fa-chevron-down {
   }
   .prices .price-info {
     font-size: 18px;
+  }
+  .team {
+    background-image: url("../img/team-hero-big.jpg");
   }
 }
 @media (min-width: 1200px) {
