--- a/sass/main.scss
+++ b/sass/main.scss
@@ -250,7 +250,36 @@ header {
 }
 
 .team {
+	position: relative;
+	background-image: url('../img/team-hero-small.jpg');
+	background-position: center;
+	background-size: cover;
+	background-attachment: fixed;
+	color: $light-gray;
+	z-index: 0;
+
+	.team-shadow {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.4);
+		z-index: -5;
+	}
+
+	h2 {
+		color: $light-gray;
+	}
+
 	.card {
+		img {
+			height: 300px;
+		}
+
+		.card-title {
+			text-transform: uppercase;
+		}
+
 		.card-footer {
 			i {
 				padding: 10px;
@@ -298,6 +327,10 @@ header {
 		.price-info {
 			font-size: 18px;
 		}
+	}
+
+	.team {
+		background-image: url('../img/team-hero-big.jpg');
 	}
 }
 
