--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,6 @@ header .fa-chevron-down {
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  color: #ddd;
   z-index: 0;
 }
 .team .team-shadow {
@@ -242,14 +241,22 @@ header .fa-chevron-down {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: -5;
 }
 .team h2 {
   color: #ddd;
 }
+.team .card {
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
 .team .card img {
   height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .team .card .card-title {
   text-transform: uppercase;
@@ -258,6 +265,15 @@ header .fa-chevron-down {
   padding: 10px;
   font-size: 16px;
   color: #039dff;
+}
+.team .card:hover {
+  -webkit-transform: scale(0.96);
+          transform: scale(0.96);
+}
+.team .card-title {
+  margin-bottom: 20px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 @media (min-width: 375px) {
