--- a/sass/main.scss
+++ b/sass/main.scss
@@ -255,7 +255,6 @@ header {
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
-	color: $light-gray;
 	z-index: 0;
 
 	.team-shadow {
@@ -263,7 +262,7 @@ header {
 		top: 0;
 		width: 100%;
 		height: 100%;
-		background-color: rgba(0, 0, 0, 0.4);
+		background-color: rgba(0, 0, 0, 0.8);
 		z-index: -5;
 	}
 
@@ -272,8 +271,11 @@ header {
 	}
 
 	.card {
+		transition: transform 0.3s;
+
 		img {
 			height: 300px;
+			object-fit: cover;
 		}
 
 		.card-title {
@@ -287,6 +289,16 @@ header {
 				color: $main-color;
 			}
 		}
+	}
+
+	.card:hover {
+		transform: scale(0.96);
+	}
+
+	.card-title {
+		margin-bottom: 20px;
+		text-align: center;
+		text-transform: uppercase;
 	}
 }
 
