--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,20 @@ header .fa-chevron-down {
   height: 160px;
 }
 
+.achievements i {
+  margin-top: 20px;
+  font-size: 48px;
+  color: #039dff;
+}
+.achievements .achievement-card-title {
+  font-size: 28px;
+}
+.achievements .achievement-card-text {
+  margin-top: 20px;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
 @media (min-width: 375px) {
   header h1 {
     font-size: 36px;
