--- a/css/main.css
+++ b/css/main.css
@@ -275,12 +275,17 @@ header .fa-chevron-down {
 }
 
 .achievements i {
+  padding: 10px;
   margin-top: 20px;
   font-size: 48px;
-  color: #039dff;
+  color: #fff;
+  text-shadow: 0 0 5px #000;
+}
+.achievements .achievements-list {
+  padding: 20px 0;
 }
 .achievements .achievement-card-title {
-  font-size: 28px;
+  font-size: 22px;
 }
 .achievements .achievement-card-text {
   margin-top: 20px;
