--- a/css/main.css
+++ b/css/main.css
@@ -293,6 +293,54 @@ header .fa-chevron-down {
   text-transform: uppercase;
 }
 
+.contact {
+  position: relative;
+  background-image: url("../img/contact-hero-small.jpg");
+  background-position: bottom;
+  background-size: cover;
+  background-attachment: fixed;
+  color: #fff;
+  z-index: 0;
+}
+.contact .underline {
+  color: #ddd;
+}
+.contact .contact-shadow {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 29, 0.85);
+  z-index: -5;
+}
+.contact .contact-us {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+}
+.contact .contact-item {
+  margin: 30px 0;
+}
+.contact .contact-item h3 {
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+.contact .contact-item .social-media {
+  font-size: 2 6px;
+}
+.contact .contact-item .social-media a {
+  padding: 10px;
+  color: #fff;
+}
+.contact .contact-item .social-media a:hover {
+  color: #ddd;
+}
+
 @media (min-width: 375px) {
   header h1 {
     font-size: 36px;
@@ -321,6 +369,9 @@ header .fa-chevron-down {
   }
   .team {
     background-image: url("../img/team-hero-big.jpg");
+  }
+  .contact {
+    background-image: url("../img/contact-hero-big.jpg");
   }
 }
 @media (min-width: 1200px) {
