--- a/sass/main.scss
+++ b/sass/main.scss
@@ -307,7 +307,7 @@ header {
 		text-shadow: 0 0 5px #000;
 	}
 
-	.achievements-list{
+	.achievements-list {
 		padding: 20px 0;
 	}
 
@@ -319,6 +319,58 @@ header {
 		margin-top: 20px;
 		font-size: 16px;
 		text-transform: uppercase;
+	}
+}
+
+.contact {
+	position: relative;
+	background-image: url('../img/contact-hero-small.jpg');
+	background-position: bottom;
+	background-size: cover;
+	background-attachment: fixed;
+	color: $white-color;
+	z-index: 0;
+
+	.underline {
+		color: $light-gray;
+	}
+
+	.contact-shadow {
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 29, 0.85);
+		z-index: -5;
+	}
+
+	.contact-us {
+		display: flex;
+		align-items: center;
+		color: $white-color;
+	}
+
+	.contact-item {
+		margin: 30px 0;
+
+		h3 {
+			margin-bottom: 15px;
+			text-transform: uppercase;
+			letter-spacing: 2px;
+		}
+
+		.social-media {
+			font-size: 2 6px;
+
+			a {
+				padding: 10px;
+				color: $white-color;
+			}
+
+			a:hover {
+				color: $light-gray;
+			}
+		}
 	}
 }
 
@@ -363,6 +415,10 @@ header {
 
 	.team {
 		background-image: url('../img/team-hero-big.jpg');
+	}
+
+	.contact {
+		background-image: url('../img/contact-hero-big.jpg');
 	}
 }
 
